# 2D-Robotic-Arm-Simulator

./: .gitignore  CMakeLists.txt  README.md
include/: robot_arm.hpp  transform2d.hpp
src/: main.cpp  robot_arm.cpp  transform2d.cpp
